force-app/main/default/objects/BOH_Lead_Auto_Closure_Mapping__mdt/BOH_Lead_Auto_Closure_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata created to identify the lead type and also to get the number of days in which lead should be auto closed</description>
    <label>BOH Lead Auto Closure Mapping</label>
    <pluralLabel>BOH Lead Auto Closure Mappings</pluralLabel>
</CustomObject>