force-app/main/default/objects/BOH_Lead_Auto_Closure_Mapping__mdt/fields/Lead_Auto_Closure_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Auto_Closure_Days__c</fullName>
    <description>Number of days in which lead should be auto closed.</description>
    <label>Lead Auto Closure Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>