force-app/main/default/objects/BOH_Lead_Auto_Closure_Mapping__mdt/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>