force-app/main/default/objects/BOH_Lead_Auto_Closure_Mapping__mdt/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>